# ShakeChecker-EX

./: .gitignore  CLAUDE.md  README.md  ShakeChecker.spec  calibration.toml  cspell.json  debug_zorder.py  launcher.cmd  launcher.ps1  pyproject.toml  run_launcher.cmd
.github/workflows/: ci.yml  release.yml
data/: species_core.json  species_index.json
docs/: ARCHITECTURE.md  GAME_MECHANICS.md  README.md  help.txt  hub_validation.md  index.html
docs/img/: README.md
fixtures/: expected.json
scripts/: dex_here.py  dex_image_check.py  diff_species.py  fetch_sprites.py  launcher.ps1  measure_fill.py  measure_fixture_hp.py  preview_types.py  update_data.py  update_locations.py  update_species.py
src/: account_store.py  app.py  battle_log.py  battle_logic.py  battle_panel.py  battle_reader.py  catch_calc.py  dex_panel.py  dex_session.py  dex_tracker.py  game_time.py  location_reader.py  name_reader.py  ocr_engine.py  overlay.py  settings_panel.py  settings_store.py  sprite_loader.py  turn_tracker.py  ui_components.py  ui_overlay.py  ui_theme.py  window_capture.py
src/battle/: battle_context.py  battle_controller.py  battle_logic.py  battle_manager.py  battle_vision.py  catch_math.py  name_reader.py  type_chart.py
tests/: test_battle_logic.py  test_battle_reader.py  test_catch_calc.py  test_dex_panel_widget.py  test_dex_session.py  test_dex_tracker.py  test_game_time.py  test_hud_time.py  test_name_reader.py  test_overlay.py  test_settings_store.py  test_single_instance.py  test_sprite_loader.py  test_status_classify.py  test_turn_tracker.py  test_window_capture.py
(+28 files in other folders)
